# periortree

./: .travis.yml  CMakeLists.txt  README.md
docs/: Makefile  document.tex  fig-rect-rep.eps  fig-result-expand-intersect.eps  fig1.eps  fig2.eps  fig3.eps  library.bib
experimental/: aabb.hpp  adjust_box.hpp  area.hpp  boundary_condition.hpp  centroid.hpp  dump.hpp  expand.hpp  intersects.hpp  point.hpp  rtree.hpp  rtree_node.hpp  within.hpp
periortree/: aabb_traits.hpp  area.hpp  boundary_condition.hpp  boundary_conditions.hpp  centroid.hpp  config.hpp  containers.hpp  expand.hpp  indexable.hpp  intersects.hpp  node.hpp  point.hpp  point_ops.hpp  point_traits.hpp  query.hpp  rectangle.hpp  rectangle_traits.hpp  rtree.hpp  rtree_node.hpp  to_svg.hpp  within.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  aabb_type.hpp  point_type.hpp  test_aabb.cpp  test_area.cpp  test_boundary.cpp  test_centroid.cpp  test_expand.cpp  test_point.cpp
